<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question1">O Ceu e Azul?</string>
    <string name="question2">esse ano e 2017?</string>
    <string name="question3">a banana e uma fruta?</string>
    <string name="question4">o mar e doce?</string>
    <string name="question5">recife e a capital de pernambuco?</string>
    <string name="question6">a lua e de queijo?</string>
    <string name="true_button">sim</string>
    <string name="false_button">nao</string>
    <string name="volt_button">voltar</string>
    <string name="next_button">ir</string>
    <string name="correto_toast">Correto!</string>
    <string name="incorreto_toast">Incorreto!</string>
    <string name="status">Pontuação: 0</string>
    <string name="warning_text">Tem certeza que quer fazer isso?</string>
    <string name="show_answer_button">Mostrar resposta</string>
    <string name="cheat_button">Trapacear!</string>
    <string name="judgment_toast">Trapacear é errado.</string>

</resources>
