<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/question1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/true_button"
                android:layout_width="116dp"
                android:layout_height="66dp"
                app:srcCompat="@android:color/holo_green_light"
                android:contentDescription="@string/true_button"/>

            <ImageButton
                android:id="@+id/false_button"
                android:layout_width="116dp"
                android:layout_height="66dp"
                app:srcCompat="@android:color/holo_red_dark"
                android:contentDescription="@string/false_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/volt_button"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_media_rew"
                android:contentDescription="@string/volt_button"/>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_media_ff"
                android:contentDescription="@string/next_button"/>
        </LinearLayout>
        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>